fix: pom file and some test